# portfolio

./: README.md
cars_data/: pyproject.toml
cars_data/kafka/: Dockerfile.producer  docker-compose-kafka.yaml  producer.py
cars_data/tests/: main.py
