[tool.poetry]
name = "cars-data"
version = "0.1.0"
description = ""
authors = ["ncorreia47 <dev.ncorr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^33.1.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
kafka-python = "^2.0.2"
faker-vehicle = "^0.2.0"
faker-music = "^0.4"
faker-education = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
